# LogViewer

./: .gitignore  1_Main.py  README.md  app.logfmt  app.py  app1.log.sample  app2.log.sample  app2.logfmt  config.yaml  pyproject.toml
app/core/: settings.py  texts.py
app/dataflow/parsing/: __init__.py  logfile.py  parser.py
app/dataflow/processing/: filter.py
app/visualization/: statistics.py
app/visualizations/: load_hist.py
pages/: 3_About_us.py  docs.py
